[gd_scene load_steps=3 format=3 uid="uid://c7hacl0q5vylx"]

[ext_resource type="Script" path="res://scripts/mobspawner.gd" id="1_7axsk"]
[ext_resource type="FontFile" uid="uid://chom50t0lwh0a" path="res://assets/fonts/PixelOperator8.ttf" id="2_m5lw7"]

[node name="mobspawner" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7axsk")

[node name="Timer" type="Timer" parent="."]

[node name="Label6" type="Label" parent="."]
offset_left = -59.0
offset_top = -39.0
offset_right = 66.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("2_m5lw7")
theme_override_font_sizes/font_size = 8
text = "SECRET TUNNEL!"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
